[package]
name = "beholders"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prover"
path = "src/prover.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"


[dependencies]
kzg = { git = "https://github.com/grandinetech/rust-kzg.git", package = "rust-kzg-blst", features = [
    "parallel",
] }
anyhow = "1.0.97"
bytemuck = "1.21.0"
clap = { version = "4.5.35", features = ["derive"] }
itertools = "0.14.0"

kzg_traits = { git = "https://github.com/grandinetech/rust-kzg.git", package = "kzg", features = [
    "parallel",
] }
rayon = "1.10.0"
sha2 = { version = "0.10.8", features = ["compress"] }
humansize = "2.1.3"

[dev-dependencies]
criterion = "0.5.1"
test-case = "3.3.1"

[[bench]]
name = "proving"
harness = false
